<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr04_20171.labscm20171.lab1.activities.ContactInfo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:alpha="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_phone_black_24px"
            android:id="@+id/imageView1"
            android:layout_weight="1"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/telefonoHint"
                android:id="@+id/txtTelefono"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:alpha="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_email_black_24px"
            android:id="@+id/imageView3"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint"
                android:id="@+id/txtEmail"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:alpha="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_explore_black_24px"
            android:id="@+id/imageView4"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="@string/paisHint"
                android:id="@+id/txtPais" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:alpha="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_account_balance_black_24px"
            android:id="@+id/imageView5"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="@string/ciudadHint"
                android:id="@+id/txtCiudad" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:alpha="0.6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_room_black_24px"
            android:id="@+id/imageView2"
            android:layout_weight="1" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccionHint"
                android:id="@+id/txtDireccion"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_gravity="end"
        android:onClick="onClickNext" />

</LinearLayout>
